--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,3 +122,7 @@ footer {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
+
+footer h4 {
+    color:#d9dcd6;
+}
