--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,8 @@ body {
     background-color: #d9dcd6;
 }
 
+/* Header */
+
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -37,14 +39,20 @@ header nav ul li {
     margin-left: 25px;
 }
 
+/* Links */
+
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+/* Paragraphs */
+
 p {
     font-size: 16px;
 }
+
+/* Banner */
 
 #background-image {
     height: 800px;
@@ -54,6 +62,8 @@ p {
     background-size: cover;
     background-position: center;
 }
+
+/* Content */
 
 .float-left {
     float: left;
@@ -89,6 +99,8 @@ p {
     font-size:36px;
 }
 
+/* Aside */
+
 #benefits {
     margin-right: 20px;
     padding: 20px;
@@ -115,6 +127,8 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+
+/* Footer */
 
 footer {
     padding: 30px;
